# agilex_bringup_ros2

./: README  README.md  package.xml  setup.cfg  setup.py
launch/: agilex.launch.py
