<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agilex_bringup_ros2</name>
  <version>0.0.1</version>
  <description>Package for launching the RTCL AgileX robot in ROS2</description>
  <maintainer email="ntcurran@umich.edu">Noah T. Curran</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- List all packages that contain launch files you're including -->
  <exec_depend>rslidar_sdk</exec_depend>
  <exec_depend>fixposition_driver_ros2</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>hunter_base</exec_depend>
  
  <!-- Launch-specific dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
